clean up tables; add reference links

--- a/docs/references/javascript/session-with-activities.mdx
+++ b/docs/references/javascript/session-with-activities.mdx
@@ -5,26 +5,22 @@ description: The SessionWithActivities object is a modified Session object. It c
 
 # `SessionWithActivities`
 
-The `SessionWithActivities` object is a modified [Session](/docs/references/javascript/session) object. It contains most of the information that the `Session` object stores, adding extra information about the current session's latest activity.
+The `SessionWithActivities` object is a modified [`Session`][session-ref] object. It contains most of the information that the [`Session`][session-ref] object stores, adding extra information about the current session's latest activity.
 
-The additional data included in the latest activity are useful for analytics purposes. A [SessionActivity](#session-activity) object will provide information about the user's location, device and browser.
+The additional data included in the latest activity are useful for analytics purposes. A [`SessionActivity`](#session-activity) object will provide information about the user's location, device and browser.
 
-While the `SessionWithActivities` object wraps the most important information around a `Session` object, the two objects have entirely different methods.
+While the `SessionWithActivities` object wraps the most important information around a [`Session`][session-ref] object, the two objects have entirely different methods.
 
-## Attributes
+## Properties
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for the session.</>]},
-{cells: [<code>status</code>, <a href="#sessionstatus"><code>SessionStatus</code></a>, <>The current state of the session.</>]},
-{cells: [<code>lastActiveAt</code>, <code>Date</code>, <>The time the session was last active on the Client.</>]},
-{cells: [<code>abandonAt</code>, <code>Date</code>, <>The time when the session was abandoned by the user.</>]},
-{cells: [<code>expireAt</code>, <code>Date</code>, <>The time the session expires and will seize to be active.</>]},
-{cells: [<code>latestActivity</code>, <a href="#sessionactivity"><code>SessionActivity</code></a>, <>An object that provides additional information about this session, focused around user activity data.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for the session. |
+| `status` | [`SessionStatus`](#session-status) | The current state of the session. |
+| `lastActiveAt` | `Date` | The time the session was last active on the [`Client`][client-ref]. |
+| `abandonAt` | `Date` | The time when the session was abandoned by the user. |
+| `expireAt` | `Date` | The time the session expires and will seize to be active. |
+| `latestActivity` | [`SessionActivity`](#session-activity) | An object that provides additional information about this session, focused around user activity data. |
 
 ## Methods
 
@@ -43,21 +39,16 @@ Users can revoke only their own sessions.
 
 ### `SessionActivity`
 
-<Tables
-    headings={["Name", "Type", "Description"]}
-    headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-    rows={[
-        {cells: [<code>id</code>, <code>string</code>, <>A unique identifier for the session activity record.</>]},
-{cells: [<code>browserName</code>, <code>string | undefined</code>, <>The name of the browser from which this session activity occurred.</>]},
-{cells: [<code>browserVersion</code>, <code>string | undefined</code>, <>The version of the browser from which this session activity occurred.</>]},
-{cells: [<code>deviceType</code>, <code>string | undefined</code>, <>The type of the device which was used in this session activity.</>]},
-{cells: [<code>ipAddress</code>, <code>string | undefined</code>, <>The IP address from which this session activity originated.</>]},
-{cells: [<code>city</code>, <code>string | undefined</code>, <>The city from which this session activity occurred. Resolved by IP address geo-location.</>]},
-{cells: [<code>country</code>, <code>string | undefined</code>, <>The country from which this session activity occurred. Resolved by IP address geo-location.</>]},
-{cells: [<code>isMobile</code>, <code>boolean | undefined</code>, <>Will be set to `true` if the session activity came from a mobile device. Set to `false` otherwise.</>]},
-    ]}
-    />
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for the session activity record. |
+| `browserName` | `string \| undefined` | The name of the browser from which this session activity occurred. |
+| `browserVersion` | `string \| undefined` | The version of the browser from which this session activity occurred. |
+| `deviceType` | `string \| undefined` | The type of the device which was used in this session activity. |
+| `ipAddress` | `string \| undefined` | The IP address from which this session activity originated. |
+| `city` | `string \| undefined` | The city from which this session activity occurred. Resolved by IP address geo-location. |
+| `country` | `string \| undefined` | The country from which this session activity occurred. Resolved by IP address geo-location. |
+| `isMobile` | `boolean \| undefined` | Will be set to `true` if the session activity came from a mobile device. Set to `false` otherwise. |
 
 
 ### `SessionStatus`
@@ -66,15 +57,15 @@ Users can revoke only their own sessions.
 type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | "replaced" | "revoked";
 ```
 
-<Tables
-  headings={["Value", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>abandoned</code>, <>The session was abandoned client-side.</>]},
-{cells: [<code>active</code>, <>The session is valid and all activity is allowed.</>]},
-{cells: [<code>ended</code>, <>The user signed out of the session, but the <code>Session</code> remains in the <code>Client</code> object.</>]},
-{cells: [<code>expired</code>, <>The period of allowed activity for this session has passed.</>]},
-{cells: [<code>removed</code>, <>The user signed out of the session and the <code>Session</code> was removed from the <code>Client</code> object.</>]},
-{cells: [<code>replaced</code>, <>The session has been replaced by another one, but the <code>Session</code> remains in the <code>Client</code> object.</>]},
-{cells: [<code>revoked</code>, <>he application ended the session and the <code>Session</code> was removed from the <code>Client</code> object.</>]},  ]}
-/>
+| Value | Description |
+| --- | --- |
+| `abandoned` | The session was abandoned client-side. |
+| `active` | The session is valid and all activity is allowed. |
+| `ended` | The user signed out of the session, but the [`Session`][session-ref] remains in the [`Client`][client-ref] object. |
+| `expired` | The period of allowed activity for this session has passed. |
+| `removed` | The user signed out of the session and the [`Session`][session-ref] was removed from the [`Client`][client-ref] object. |
+| `replaced` | The session has been replaced by another one, but the [`Session`][session-ref] remains in the [`Client`][client-ref] object. |
+| `revoked` | The application ended the session and the [`Session`][session-ref] was removed from the [`Client`][client-ref] object. |
+
+[session-ref]: /docs/references/javascript/session
+[client-ref]: /docs/references/javascript/client
