--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -9,7 +9,7 @@ The `Session` object is an abstraction over an HTTP session. It models the perio
 
 The `Session` object includes methods for recording session activity and ending the session client-side. For security reasons, sessions can also expire server-side.
 
-As soon as a [`User`](/docs/references/javascript/user/user) signs in, Clerk creates a `Session` for the current [`Client`](/docs/references/javascript/client). Clients can have more than one sessions at any point in time, but only one of those sessions will be **active**.
+As soon as a [`User`](/docs/references/javascript/user/user) signs in, Clerk creates a `Session` for the current [`Client`][client-ref]. Clients can have more than one sessions at any point in time, but only one of those sessions will be **active**.
 
 In certain scenarios, a session might be replaced by another one. This is often the case with [mutli-session applications](/docs/custom-flows/multi-session-applications).
 
@@ -20,24 +20,20 @@ All sessions that are **expired**, **removed**, **replaced**, **ended** or **aba
 
 ## Properties
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for the session.</>]},
-{cells: [<code>user</code>, <code>User</code>, <>The user associated with the session.</>]},
-{cells: [<code>publicUserData</code>, <code><a href="#public-user-data">PublicUserData</a></code>, <>Public information about the user that this session belongs to.</>]},
-{cells: [<code>status</code>, <code><a href="#session-status">SessionStatus</a></code>, <>The current state of the session.</>]},
-{cells: [<code>lastActiveAt</code>, <code>Date</code>, <>The time the session was last active on the Client.</>]},
-{cells: [<code>abandonAt</code>, <code>Date</code>, <>The time when the session was abandoned by the user.</>]},
-{cells: [<code>expireAt</code>, <code>Date</code>, <>The time the session expires and will seize to be active.</>]},
-{cells: [<code>updatedAt</code>, <code>Date</code>, <>The last time the session recorded activity of any kind.</>]},
-{cells: [<code>createdAt</code>, <code>Date</code>, <>The time the session was created.</>]},
-{cells: [<code>lastActiveToken</code>, <code>TokenResource | null</code>, <>The last active token for the session</>]},
-{cells: [<code>lastActiveOrganizationId</code>, <code>string | null</code>, <>The last active organization identifier </>]},
-{cells: [<code>actor</code>, <code>ActJWTClaim | null</code>, <>The JWT actor for the session </>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for the session. |
+| `user` | [`User`](/docs/references/javascript/user/user) | The user associated with the session. |
+| `publicUserData` | [`PublicUserData`](#public-user-data) | Public information about the user that this session belongs to. |
+| `status` | [`SessionStatus`](#session-status) | The current state of the session. |
+| `lastActiveAt` | `Date` | The time the session was last active on the [`Client`][client-ref]. |
+| `abandonAt` | `Date` | The time when the session was abandoned by the user. |
+| `expireAt` | `Date` | The time the session expires and will seize to be active. |
+| `updatedAt` | `Date` | The last time the session recorded activity of any kind. |
+| `createdAt` | `Date` | The time the session was created. |
+| `lastActiveToken` | `TokenResource \| null` | The last active token for the session |
+| `lastActiveOrganizationId` | `string \| null` | The last active organization identifier  |
+| `actor` | `ActJWTClaim \| null` | The JWT actor for the session  |
 
 ## Methods
 
@@ -51,12 +47,9 @@ Marks the session as ended. The session will no longer be active for this Client
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-  {cells: [ <code>Promise{"<"}<a href="/docs/references/javascript/session">Session</a>{">"}</code>, <>The session that was just ended.</>]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<Session>` | The session that was just ended. |
 
 ### `remove()`
 
@@ -68,12 +61,9 @@ Marks the session as removed. The session will no longer be active for this Clie
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-  {cells: [ <code>Promise{"<"}<a href="/docs/references/javascript/session">Session</a>{">"}</code>, <>The session that was just removed.</>]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<Session>` | The session that was just removed. |
 
 ### `touch()`
 
@@ -86,13 +76,9 @@ Touches the session, signifying some kind of user activity. Use this method to r
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-  {cells: [ <code>Promise{"<"}<a href="/docs/references/javascript/session">Session</a>{">"}</code>, <>The session that was just touched.</>]},
-  ]}
-/>
-
+| Type | Description |
+| --- | --- |
+| `Promise<Session>` | The session that was just touched. |
 
 ### `getToken()`
 
@@ -104,43 +90,31 @@ Retrieves the user's session token for the given template or the default clerk t
 
 #### `GetTokenOptions`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>leewayInSeconds</code>, <code>number</code>, <>The number of seconds that we allow the token to be cached.</>]},
-{cells: [<code>template?</code>, <code>string</code>, <>The name of the JWT template to generate a new token from.</>]},
-{cells: [<code>throwOnError?</code>, <code>boolean</code>, <>Whether to throw an error or return an empty string, if an error occurs.</>]},
-{cells: [<code>skipCache?</code>, <code>boolean</code>, <>Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields).<br />Defaults to `false`.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `leewayInSeconds` | `number` | The number of seconds to allow the token to be cached for. |
+| `template?` | `string` | The name of the JWT template to generate a new token from. |
+| `throwOnError?` | `boolean` | Whether to throw an error or return an empty string, if an error occurs. |
+| `skipCache?` | `boolean` | Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields).<br />Defaults to `false`. |
 
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-  {cells: [ <code>Promise{"<string | null>"}</code>, <>The requested token.</>]},
-  ]}
-/>
-
+| Type | Description |
+| --- | --- |
+| `Promise<string \| null>` | The requested token. |
 
 ## Types
 
 ### `PublicUserData`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>firstName</code>, <code>string | null</code>, <>The user's first name. This attribute will only be populated if name is enabled in instance settings.</>]},
-{cells: [<code>lastName?</code>, <code>string | null</code>, <>The user's last name. This attribute will only be populated if name is enabled in instance settings.</>]},
-{cells: [<code>profileImageUrl</code>, <code>string</code>, <>The URL of the user's profile image.</>]},
-{cells: [<code>identifier</code>, <code>string</code>, <>The user's identifier (email address, phone number, username, etc) that was used for authentication when this session was created.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `firstName` | `string \| null` | The user's first name. This attribute will only be populated if name is enabled in instance settings. |
+| `lastName` | `string \| null` | The user's last name. This attribute will only be populated if name is enabled in instance settings. |
+| `imageUrl` | `string` | The URL of the user's profile image. |
+| `hasImage` | `boolean` | Whether the user has a profile image. |
+| `identifier` | `string` | The user's identifier (email address, phone number, username, etc) that was used for authentication when this session was created. |
 
 ### `SessionStatus`
 
@@ -148,16 +122,14 @@ Retrieves the user's session token for the given template or the default clerk t
 type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | "replaced" | "revoked";
 ```
 
+| Value | Description |
+| --- | --- |
+| `abandoned` | The session was abandoned client-side. |
+| `active` | The session is valid and all activity is allowed. |
+| `ended` | The user signed out of the session, but the `Session` remains in the [`Client`][client-ref] object. |
+| `expired` | The period of allowed activity for this session has passed. |
+| `removed` | The user signed out of the session and the `Session` was removed from the [`Client`][client-ref] object. |
+| `replaced` | The session has been replaced by another one, but the `Session` remains in the [`Client`][client-ref] object. |
+| `revoked` | The application ended the session and the `Session` was removed from the [`Client`][client-ref] object. |
 
-<Tables
-  headings={["Value", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>abandoned</code>, <>The session was abandoned client-side.</>]},
-{cells: [<code>active</code>, <>The session is valid and all activity is allowed.</>]},
-{cells: [<code>ended</code>, <>The user signed out of the session, but the <code>Session</code> remains in the <code>Client</code> object.</>]},
-{cells: [<code>expired</code>, <>The period of allowed activity for this session has passed.</>]},
-{cells: [<code>removed</code>, <>The user signed out of the session and the <code>Session</code> was removed from the <code>Client</code> object.</>]},
-{cells: [<code>replaced</code>, <>The session has been replaced by another one, but the <code>Session</code> remains in the <code>Client</code> object.</>]},
-{cells: [<code>revoked</code>, <>The application ended the session and the <code>Session</code> was removed from the <code>Client</code> object.</>]},  ]}
-/>
+[client-ref]: /docs/references/javascript/client/client
