--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -3,9 +3,6 @@ title: <ClerkProvider />
 description: The <ClerkProvider /> component wraps your React application to provide active session and user context to Clerk's hooks and other components.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<ClerkProvider />`
 
 The `<ClerkProvider />` component wraps your React application to provide active session and user context to Clerk's hooks and other components.
@@ -95,7 +92,10 @@ ReactDOM.render(
 | `clerkJSVersion?`         | `string`                                   | Define the npm version for `@clerk/clerk-js`.                                                                                                                                                                              |
 | `supportEmail?`           | `string`                                   | Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.                                                                                              |
 | `localization?`           | `object`                                   | Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                               |
-| `appearance?`             | `object`                                   | Optional object to customize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                              |
+| `appearance?`             | <code>[Appearance](/docs/components/customization/overview) \| undefined</code>                                   | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                                                              |
 | `allowedRedirectOrigins?` | `Array<string \| RegExp>`                  | Optional array of domains used to validate against the query param of an auth redirect. If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
 | `afterSignInUrl`          | `string`                                   | Full URL or path to navigate after successful sign in.                                                                                                                                                                     |
 | `afterSignUpUrl`          | `string`                                   | Full URL or path to navigate after successful sign up.                                                                                                                                                                     |
+
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
