add "satellite" props

--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -82,20 +82,23 @@ ReactDOM.render(
 
 ## Props
 
-| Name                      | Type                                       | Description                                                                                                                                                                                                                |
-|---------------------------|--------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| `publishableKey`          | `string`                                   | Clerk publishable key for your instance. This can be found in your Clerk Dashboard.                                                                                                                                        |
-| `frontendApi`             | `string`                                   | The frontend API host for your instance. This can be found in your Clerk Dashboard.                                                                                                                                        |
-| `navigate?`               | `(to: string) => Promise<unknown> \| void` | A function which takes the destination path as an argument and performs a "push" navigation.                                                                                                                               |
-| `clerkJSUrl?`             | `string`                                   | Define the URL that `@clerk/clerk-react` should hot-load `@clerk/clerk-js` from.                                                                                                                                           |
-| `clerkJSVariant?`         | `string`                                   | If your web application only uses Control components you can set this value to `headless` and load a minimal ClerkJS bundle for optimal page performance.                                                                  |
-| `clerkJSVersion?`         | `string`                                   | Define the npm version for `@clerk/clerk-js`.                                                                                                                                                                              |
-| `supportEmail?`           | `string`                                   | Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.                                                                                              |
-| `localization?`           | `object`                                   | Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                               |
-| `appearance?`             | <code>[Appearance](/docs/components/customization/overview) \| undefined</code>                                   | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                                                              |
-| `allowedRedirectOrigins?` | `Array<string \| RegExp>`                  | Optional array of domains used to validate against the query param of an auth redirect. If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
-| `afterSignInUrl`          | `string`                                   | Full URL or path to navigate after successful sign in.                                                                                                                                                                     |
-| `afterSignUpUrl`          | `string`                                   | Full URL or path to navigate after successful sign up.                                                                                                                                                                     |
+| Name                      | Type                                                                            | Description                                                                                                                                                                                                                |
+| ------------------------- | ------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `publishableKey`          | `string`                                                                        | Clerk publishable key for your instance. This can be found in your Clerk Dashboard.                                                                                                                                        |
+| `frontendApi`             | `string`                                                                        | The frontend API host for your instance. This can be found in your Clerk Dashboard.                                                                                                                                        |
+| `navigate?`               | `(to: string) => Promise<unknown> \| void`                                      | A function which takes the destination path as an argument and performs a "push" navigation.                                                                                                                               |
+| `clerkJSUrl?`             | `string`                                                                        | Define the URL that `@clerk/clerk-react` should hot-load `@clerk/clerk-js` from.                                                                                                                                           |
+| `clerkJSVariant?`         | `string`                                                                        | If your web application only uses Control components you can set this value to `headless` and load a minimal ClerkJS bundle for optimal page performance.                                                                  |
+| `clerkJSVersion?`         | `string`                                                                        | Define the npm version for `@clerk/clerk-js`.                                                                                                                                                                              |
+| `supportEmail?`           | `string`                                                                        | Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.                                                                                              |
+| `localization?`           | `object`                                                                        | Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                               |
+| `appearance?`             | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                                      |
+| `allowedRedirectOrigins?` | `Array<string \| RegExp>`                                                       | Optional array of domains used to validate against the query param of an auth redirect. If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
+| `afterSignInUrl`          | `string`                                                                        | Full URL or path to navigate after successful sign in.                                                                                                                                                                     |
+| `afterSignUpUrl`          | `string`                                                                        | Full URL or path to navigate after successful sign up.                                                                                                                                                                     |
+| `isSatellite`             | `boolean \| ((url: URL) => boolean)`                                            | This option defines that the application is a satellite application.                                                                                                                                                       |
+| `domain`                  | `string \| ((url: URL) => boolean)`                                             | This option sets the domain of the satellite application. This is required since we cannot figure this out by your publishable key, since it is the same for all of your multi-domain apps.                                |
+| `signInUrl`               | `string`                                                                        | This url will be used for any redirects that might happen and needs to point to your primary application. This option is optional for production instances and required for development instances.                         |
 
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
