docs(proxy): Fix missing closing </Tab>

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -66,14 +66,14 @@ When enabling proxying, you must provide the path of your proxy relative to the 
   <Tab>
 
   <Tab>
+    The request below will update the domain to use the proxy URL `https://app.dev/__clerk`. In doing so, it will trigger checks to validate the proxy URL.
+
     ```bash
     curl -X POST https://api.clerk.dev/v1/domains/{{DOMAIN ID}} \
         -H "Authorization: Bearer {{SECRET KEY}}" \
         -H "Content-Type: application/json" \
         -d '{"proxy_url": "https://app.dev/__clerk"}}'
     ```
-
-    The above request will update the domain to use the proxy URL `https://app.dev/__clerk`. In doing so, it will trigger checks to validate the proxy URL. If the proxy URL is invalid, the request will fail.
   </Tab>
 </Tabs>
 
