docs(proxy): Fix component nesting

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -63,7 +63,7 @@ When enabling proxying, you must provide the path of your proxy relative to the 
     3. Click on **Advanced**.
     4. Enter your proxy URL in the **Proxy URL** field.
       - The proxy URL must be a valid URL and resolve correctly.
-  <Tab>
+  </Tab>
 
   <Tab>
     The request below will update the domain to use the proxy URL `https://app.dev/__clerk`. In doing so, it will trigger checks to validate the proxy URL.
