--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -113,18 +113,13 @@ export const config = {
 
 With this middleware, your entire application is protected. If you try to access it, the middleware will redirect you to your Sign Up page. If you want to make other routes public, check out the [authMiddleware reference page](/docs/references/nextjs/auth-middleware).
 
-
-
-
-
-### Build your own sign in and sign up pages
+### Build your own sign-in and sign-up pages
 
 At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of the box. You can start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application. 
 
 Clerk also offers a set of [prebuilt components](/docs/components/overview) and [custom flows](/docs/custom-flows/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components by utilizing the Next.js optional catch-all route.
 
-#### Build your sign up page
-
+#### Build your sign-up page
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
   ```tsx filename="app/sign-up/[[...sign-up]]/page.tsx"
@@ -144,8 +139,7 @@ Clerk also offers a set of [prebuilt components](/docs/components/overview) and 
   ```
 </CodeBlockTabs>
 
-#### Build your sign in page
-
+#### Build your sign-in page
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
   ```tsx filename="app/sign-in/[[...sign-in]]/page.tsx"
@@ -168,7 +162,6 @@ Clerk also offers a set of [prebuilt components](/docs/components/overview) and 
 <Callout type="info" emoji="ℹ️">
   By default, the Clerk components inherit the font family. `create-next-app` does not apply a global font family. When you launch your application, you may notice that the font family is different.
 </Callout>
-
 
 #### Update your environment variables
 
@@ -277,11 +270,11 @@ export default function Example() {
 
 #### App Router
 
-[`getAuth()`](/docs/references/nextjs/get-auth) will retrieve the userId of a authenticated user in your Route Handlers. Any requests from a Client Component will automatically include the user's current token as the Bearer token. [`auth()`](/docs/references/nextjs/auth) and [`currentUser()`](/docs/references/nextjs/current-user) are new helpers that you can user inside of your Server Components and Actions.
+[`getAuth()`](/docs/references/nextjs/get-auth) will retrieve the `userId` of an authenticated user in your Route Handlers. Any requests from a Client Component will automatically include the user's current token as the Bearer token. [`auth()`](/docs/references/nextjs/auth) and [`currentUser()`](/docs/references/nextjs/current-user) are new helpers that you can use inside of your Server Components and Actions.
 
 <Tabs items={["Route Handler", "Route Handler w/ User Fetch", "auth()", "currentUser()"]}>
   <Tab>
-    For Next.js applications using the App Router, you can protect your API routes by using the [`auth`](/docs/references/nextjs/auth) helper. 
+    You can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper. 
 
     ```tsx filename="app/api/user/route.[jsx/tsx]"
     import { NextResponse } from 'next/server';
@@ -301,7 +294,9 @@ export default function Example() {
     ```
   </Tab>
   <Tab>
-    In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name. You can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full [`User`][user-object] object.
+    You can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper. 
+
+    In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full [`User`][user-object] object.
 
    ```tsx filename="app/api/user/route.ts"
    import { NextResponse } from 'next/server';
@@ -323,9 +318,6 @@ export default function Example() {
   ```
   </Tab>
   <Tab>
-    
-    #### **`auth()`**
-
     Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the same [`Authentication` Object](/docs/references/nextjs/authentication-object) as [`getAuth(req)`](/docs/references/nextjs/get-auth) in middleware, getServerSideProps, and API routes.
 
     Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
@@ -341,9 +333,7 @@ export default function Example() {
     </Tab>
 
     <Tab>
-    #### **`currentUser()`**
-
-    [`currentUser()`](/docs/references/nextjs/current-user) loads the [`User`][user-object] object for the authenticated user from Clerk's backend API. This is helpful if you want to render information, like their first and last name, directly from the server.
+    Clerk has introduced a new [`currentUser()`](/docs/references/nextjs/current-user) helper that loads the [`User`][user-object] object for the authenticated user from Clerk's Backend API. This is helpful if you want to render information, like their first and last name, directly from the server.
 
     Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
@@ -361,7 +351,7 @@ export default function Example() {
 
 #### Pages Router
 
-<Tabs items={["Api Route", "Api Route w/ User Fetch", "getServerSideProps"]}>
+<Tabs items={["API Route", "API Route w/ User Fetch", "getServerSideProps"]}>
 
   <Tab>
     For Next.js apps using the Pages Router, you can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
@@ -385,6 +375,9 @@ export default function Example() {
     ```
   </Tab>
   <Tab>
+    For Next.js apps using the Pages Router, you can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
+     
+    In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full [`User`][user-object] object.
 
     ```tsx filename="pages/api/auth.ts"
     import { clerkClient } from "@clerk/nextjs";
@@ -450,7 +443,6 @@ export default function Example() {
     };
     ```
   </Tab>
-
 
 </Tabs>
 
