--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -9,6 +9,12 @@ The `authMiddleware()` helper integrates Clerk authentication into your Next.js 
 
 ## Usage
 
+The `middleware.ts` file should be created in the root folder of your application (or inside src/ if that is how you set up your app). 
+
+<Callout type="info">
+  For more information about middleware in Next.js, see the [Next.js documentation](https://nextjs.org/docs/pages/building-your-application/routing/middleware).
+</Callout>
+
 ```ts filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
 
