move copy to callout for better visibility

--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -11,12 +11,14 @@ These are all methods on [the Clerk class](/docs/references/javascript/clerk/cle
 
 ```typescript
 function setSession(
-    session: Session | string | null,
-    beforeEmit?: BeforeEmitCallback
+  session: Session | string | null,
+  beforeEmit?: BeforeEmitCallback
 ): Promise<void>;
 ```
 
-Deprecated in favor of [`setActive()`](#set-active).
+<Callout type="info">
+  Deprecated in favor of [`setActive()`](#set-active).
+</Callout>
 
 Set the current session on this client to the provided session. The provided session can be either a complete [`Session`][session-ref] object or simply its unique identifier.
 
@@ -46,9 +48,9 @@ If an active session already exists, it will be replaced with the new one. The c
 
 ```typescript
 function setActive({
-    session,
-    organization,
-    beforeEmit,
+  session,
+  organization,
+  beforeEmit,
 }: SetActiveParams): Promise<void>;
 ```
 
