clean up /javascript/organization pages (#382)

--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -7,14 +7,18 @@ description: These are all methods on the Clerk class that help you manage the a
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage the active session and/or organization.
 
-## `setSession()`
+## `setSession()` (deprecated)
 
 ```typescript
 function setSession(
-    session: Session | string | null,
-    beforeEmit?: BeforeEmitCallback
+  session: Session | string | null,
+  beforeEmit?: BeforeEmitCallback
 ): Promise<void>;
 ```
+
+<Callout type="info">
+  Deprecated in favor of [`setActive()`](#set-active).
+</Callout>
 
 Set the current session on this client to the provided session. The provided session can be either a complete [`Session`][session-ref] object or simply its unique identifier.
 
@@ -44,15 +48,13 @@ If an active session already exists, it will be replaced with the new one. The c
 
 ```typescript
 function setActive({
-    session,
-    organization,
-    beforeEmit,
+  session,
+  organization,
+  beforeEmit,
 }: SetActiveParams): Promise<void>;
 ```
 
-An experimental method used to set the active session and/or organization.
-
-> This method will eventually replace `setSession`.
+A method used to set the active session and/or organization.
 
 ### `SetActiveParams`
 
