--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -18,13 +18,9 @@ Generates a TOTP secret for a user that can be used to register the application 
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="#totp-resource">TOTPResource</a>{">"}</code>, <>The newly created TOTP object.</>]}
- ]}
-  />
-
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[TOTPResource](#totp-resource)\></code> | The newly created TOTP object. |
 
 ### `verifyTOTP()`
 
@@ -42,13 +38,9 @@ Verifies a TOTP secret after a user has created it. The user must provide a code
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="#totp-resource">TOTPResource</a>{">"}</code>, <>The newly verified TOTP object.</>]}
- ]}
-  />
-
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[TOTPResource](#totp-resource)\></code> | The newly verified TOTP object. |
 
 ### `disableTOTP()`
 
@@ -60,12 +52,9 @@ Disables TOTP by deleting the user's TOTP secret.
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="/docs/references/javascript/types/deleted-object">DeletedObject</a>{">"}</code>, <>The a reference to the deleted TOTP object.</>]}
- ]}
-  />
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[DeletedObject](/docs/references/javascript/types/deleted-object)\></code> | The reference to the deleted TOTP object. |
 
 ### `createBackupCode()`
 
@@ -78,12 +67,9 @@ Generates a fresh new set of backup codes for the user. Note that if this method
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="#backup-code-resource">BackupCodeResource</a>{">"}</code>, <>The newly created backup code.</>]}
- ]}
-  />
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[BackupCodeResource](#backup-code-resource)\></code> | The newly created backup code. |
 
 ## Types
 
@@ -92,10 +78,10 @@ Generates a fresh new set of backup codes for the user. Note that if this method
 | Name | Type | Description |
 | --- | --- | --- |
 | `id` | `string` | A unique identifier for this TOTP secret |
-| `secret` | `string` | The generated TOTP secret. Note: this is only returned to the client upon creation and cannot be retrieved afterwards. |
-| `uri` | `string` | A complete TOTP configuration URI including the Issuer, Account, etc that can be pasted to an authenticator app or encoded to a QR code and scanned for convenience. Just like the secret, the URI is exposed to the client only upon creation and cannot be retrieved afterwards. |
+| `secret?` | `string` | The generated TOTP secret. Note: this is only returned to the client upon creation and cannot be retrieved afterwards. |
+| `uri?` | `string` | A complete TOTP configuration URI including the Issuer, Account, etc that can be pasted to an authenticator app or encoded to a QR code and scanned for convenience. Just like the secret, the URI is exposed to the client only upon creation and cannot be retrieved afterwards. |
 | `verified` | `boolean` | Whether this TOTP secret has been verified by the user by providing one code generated with it. TOTP is not enabled on the user unless they have a verified secret. |
-| `backupCodes` | `string[]` | A set of fresh generated Backup codes. Note that this will be populated if the feature is enabled in your instance and the user doesn't already have backup codes generated. |
+| `backupCodes?` | `string[]` | A set of fresh generated Backup codes. Note that this will be populated if the feature is enabled in your instance and the user doesn't already have backup codes generated. |
 | `createdAt` | `Date` | Creation date of the TOTP secret |
 | `updatedAt` | `Date` | Update timestamp of the TOTP secret |
 
