--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -10,21 +10,21 @@ These are all methods on [the Organization class](/docs/references/javascript/or
 ## `getMemberships()`
 
 ```typescript
-function getMemberships(params?: GetMembershipsParams): Promise<PaginatedResponse<OrganizationMembership>>;
+function getMemberships(params?: GetMembersParams): Promise<PaginatedResponse<OrganizationMembership>>;
 ```
 
 Retrieve the members of the currently active organization.
 
-### `GetMembershipsParams`
+### `GetMembersParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
-| `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response |
+| `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response. |
 
 <Callout type="info">
-    `GetMembershipsParams` was recently updated. The `limit` and `offset` parameters are now deprecated.
+  `GetMembershipsParams` was recently updated to `GetMembersParams`. The `limit` and `offset` parameters are now deprecated.
 </Callout>
 
 
@@ -63,7 +63,7 @@ Please note that only administrators can add members to an organization.
 function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembership>;
 ```
 
-Updates a member based on the `userId`. For now only role can be changed.
+Updates a member based on the `userId`. Currently, only a user's role can be updated.
 
 ### `UpdateMembershipParams`
 
