--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -9,23 +9,18 @@ This is a class that represents an organization. It's returned from the [`create
 
 ## Properties
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [ <code>id</code>, <code>string</code>, "The unique identifier of the related organization."]},
-  {cells: [ <code>name</code>, <code>string</code>, "The name of the related organization."]},
-  {cells: [ <code>slug</code>, <code>string | null</code>, "The organization slug. If supplied, it must be unique for the instance."]},
-  {cells: [ <code>logoUrl</code>, <code>string | null</code>, "The full URL for the organization logo. (deprecated in favor of imageUrl)"]},
-  {cells: [ <code>imageUrl</code>, <code>string</code>, "Holds the organization logo or default logo"]},
-  {cells: [ <code>membersCount</code>, <code>number</code>, "The number of members the associated organization contains"]},
-  {cells: [ <code>pendingInvitationsCount</code>, <code>number</code>, "The number of pending invitations to users to join the organization."]},
-  {cells: [ <code>publicMetadata</code>, <code>object</code>, <>Additional information about the organization that can be read through the <a href="https://reference.clerk.dev/reference/frontend-api-reference">Frontend API</a>, but written only from the <a href="https://clerk.com/docs/reference/backend-api">Backend API</a>.
-  </>]},
-  {cells: [ <code>createdAt</code>, <code>Date</code>, "Date of the time the organization was created."]},
-  {cells: [ <code>updatedAt</code>, <code>Date</code>, "Date of the last time the user was updated."]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | The unique identifier of the related organization. |
+| `name` | `string` | The name of the related organization. |
+| `slug` | `string \| null` | The organization slug. If supplied, it must be unique for the instance. |
+| `logoUrl` | `string \| null` | The full URL for the organization logo. (deprecated in favor of `imageUrl`) |
+| `imageUrl` | `string` | Holds the organization logo or default logo. |
+| `membersCount` | `number` | The number of members the associated organization contains. |
+| `pendingInvitationsCount` | `number` | The number of pending invitations to users to join the organization. |
+| `createdAt` | `Date` | Date of the time the organization was created. |
+| `updatedAt` | `Date` | Date of the last time the user was updated. |
+| `publicMetadata` | `object` | Additional information about the organization that can be read through the Frontend API, but written only from the Backend API. |
 
 ## Methods
 
@@ -39,24 +34,16 @@ Updates an organization's attributes.
 
 #### `UpdateOrganizationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [ <code>name</code>, <code>string</code>, "The organization name."]},
-  {cells: [ <code>slug</code>, <code>string | undefined</code>, "The organization slug."]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `name` | `string` | The organization name. |
+| `slug?` | `string \| undefined` | The organization slug. |
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [ <code>Promise{"<"}<a href="/docs/references/javascript/organization/organization">Organization</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves to an Organization.</>]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[Organization][org-ref]\></code> | This method returns a `Promise` which resolves to an [Organization][org-ref]. |
 
 ### `destroy()`
 
@@ -70,13 +57,9 @@ Please note that deleting an organization will also delete all memberships and i
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-  {cells: [ <code>{"Promise<void>"}</code>, <>This method returns a <code>Promise</code> which doesn't resolve to any value.</>]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<void>` | This method returns a `Promise` which doesn't resolve to any value. |
 
 ### `setLogo()`
 
@@ -88,27 +71,19 @@ Sets or replaces an organization's logo.  Accept the logo as a file or blob. The
 
 #### `SetOrganizationLogoParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [ <code>file</code>, <code>File | Blob | null</code>, <>An image file which cannot exceed 10MB. Passing <code>null</code> will delete the organization's current logo.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `file` | `File \| Blob \| null` | An image file which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-  {cells: [ <code>Promise{"<"}<a href="/docs/references/javascript/organization/organization">Organization</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves to an Organization.</>]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[Organization][org-ref]\></code> | This method returns a `Promise` which resolves to an [Organization][org-ref]. |
 
 ## Additional methods
 
-In addition to the methods listed above, the `Organization` class also has the following methods:
+In addition to the methods listed above, the [`Organization`][org-ref] class also has the following methods:
 
 ### Members
 
@@ -122,3 +97,5 @@ In addition to the methods listed above, the `Organization` class also has the f
 *   [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations)
 *   [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
 *   [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
+
+[org-ref]: /docs/references/javascript/organization/organization
