--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -13,7 +13,7 @@ Finally, a `User` object holds profile data like the user's name, profile pictur
 
 The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to help retrieve and update user information and authentication status.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -65,6 +65,7 @@ Updates the user's attributes. Use this method to save information you collected
 
 #### `UpdateUserParams`
 
+All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -83,7 +84,7 @@ Updates the user's attributes. Use this method to save information you collected
 function delete: () => Promise<void>;
 ```
 
-Delete the current user.
+Deletes the current user.
 
 ### `setProfileImage()`
 
@@ -91,7 +92,7 @@ Delete the current user.
 function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResource>;
 ```
 
-Add the user's profile image or replace it if one already exists. This method will upload an image and associate it with the user.
+Adds the user's profile image or replaces it if one already exists. This method will upload an image and associate it with the user.
 
 #### `SetProfileImageParams`
 
@@ -101,19 +102,15 @@ Add the user's profile image or replace it if one already exists. This method wi
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="#imageresource">ImageResource</a>{">"}</code>, <>The uploaded image.</>]}
- ]}
-  />
-
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[ImageResource](#image-resource)\></code> | The uploaded image. |
 
 ##### `ImageResource`
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `id` | `string` | The unique identifier of the image. |
+| `id?` | `string` | The unique identifier of the image. |
 | `name` | `string \| null` | The name of the image. |
 | `publicUrl` | `string \| null` | The publically accessible url for the image. |
 
@@ -128,14 +125,9 @@ Retrieves all **active** sessions for this user. This method uses a cache so a n
 
 #### Returns
 
-
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="/docs/references/javascript/session-with-activities">SessionWithActivities</a>[]{">"}</code>, <>The list of active user sessions.</>]}
- ]}
-  />
-
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)\></code> | The list of active user sessions. |
 
 ### `isPrimaryIdentification()`
 
